feat: CRUD actions for halls
